<resources>
    <string name="app_name">Iliadis</string>
    <string name="home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="closeapp">Really exit from app?</string>
    <string name="language">Language</string>
    <string name="print">IP    printer</string>
    <string name="numsales">No.   sales</string>
    <string name="salesman">Salesman</string>
    <string name="afm">VAT</string>
    <string name="codecustomer">Code Customer</string>
    <string name="companyname">Company Name</string>
    <string name="completelogin">Complete below fields and continue</string>
    <string name="next">Next</string>
    <string name="customer">Customer</string>
    <string name="wellcome">Welcome</string>
    <string name="chooseshop">Please choose shop</string>
    <string name="searchcode">Search code</string>
    <string name="descproduct">Description product</string>
    <string name="price">Price</string>
    <string name="totalrest">ON STOCK</string>
    <string name="reserved">RESERVED</string>
    <string name="renew">EXPECTED</string>
    <string name="available">AVAILABLE</string>
    <string name="datedelivery">DATE OF ARRIVAL</string>
    <string name="newscan">New scan</string>
    <string name="basket">Basket</string>
    <string name="neworder">New order</string>
    <string name="initial">Home</string>
    <string name="product">Product</string>
    <string name="comment">Comment</string>
    <string name="addtobusket">Add to basket\nand continue</string>
    <string name="printorder">Print order</string>
    <string name="reprintagain">Reprint order</string>
    <string name="pendingorders">Pending orders</string>
    <string name="printing">Print</string>
    <string name="nexttoorder">Continue order</string>
    <string name="delete">Delete</string>
    <string name="editproduct">Edit</string>
    <string name="noshops">There are not shops</string>
    <string name="qty">QUANTITY</string>
    <string name="cancelorder">Do you want to stop ordering?</string>
    <string name="havependingorder">You have pending orders</string>
    <string name="qtysmaller">Quantity is smaler than default</string>
    <string name="noproducts">There are not products</string>
    <string name="sendfilecsv">The file has been sent</string>
    <string name="nosendfilecsv">The file has not been sent</string>
    <string name="renewproddb">Update Products</string>
    <string name="databaseproduct">DB Products</string>
    <string name="databasecustomer">DB Customers</string>
    <string name="databaseshops">DB Shops</string>
    <string name="databasecatalogue">DB Catalogue</string>
    <string name="databasevat">DB VAT</string>
    <string name="databasecountry">DB Country</string>
    <string name="downloadfileproduct">Download file products.. Please wait...</string>
    <string name="downloadfilecustomer">Download file customers.. Please wait...</string>
    <string name="downloadfileshops">Download file shops.. Please wait...</string>
    <string name="downloadfilecatalogue">Download file catalogue.. Please wait...</string>
    <string name="downloadfilevat">Download file VAT.. Please wait...</string>
    <string name="downloadfilecountry">Download file countries.. Please wait...</string>
    <string name="updatecart">Update\nproduct</string>
    <string name="existproduct">This product exist in cart</string>
    <string name="title_activity_basic">BasicActivity</string>
    <string name="reload_database">Databases</string>
    <string name="scanview">Scan View</string>
    <string name="subtotal">Order</string>
    <string name="fpa">VAT</string>
    <string name="totalammount">Total Amount</string>
    <string name="biggestquantity">Quantity is greater than available</string>
    <string name="csvfiles">Send missing Orders to CAP.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
