<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/icon_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/icons_order"
            android:title="@string/neworder" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/icons_history"
            android:title="@string/pendingorders" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/icon_reprint"
            android:title="@string/reprintagain" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/icon_reload"
            android:title="@string/reload_database" />
        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/icon_scan"
            android:title="@string/scanview" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/icons_settings"
            android:title="@string/action_settings" />
    </group>

    <!--<item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Reload Databases" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Scan View" />
        </menu>
    </item>-->

</menu>
