<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFaint"
    tools:context="gr.cityl.iliadis.Activities.ReloadDbsActivity">

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:textColor="#ffffff"
        android:layout_marginLeft="90dp"
        android:layout_marginRight="90dp"
        android:background="@color/colorGreen"
        android:text="@string/renewproddb" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/button2"
        android:layout_below="@+id/button2"
        android:layout_marginTop="20dp"
        android:textColor="#ffffff"
        android:layout_marginRight="90dp"
        android:background="@color/colorGreen"
        android:text="@string/databaseproduct" />

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/button3"
        android:layout_below="@+id/button3"
        android:layout_marginTop="20dp"
        android:textColor="#ffffff"
        android:layout_marginRight="90dp"
        android:background="@color/colorGreen"
        android:text="@string/databasecustomer" />

    <Button
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/button4"
        android:layout_below="@+id/button4"
        android:layout_marginTop="20dp"
        android:layout_marginRight="90dp"
        android:textColor="#ffffff"
        android:background="@color/colorGreen"
        android:text="@string/databaseshops" />

    <Button
        android:id="@+id/button6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/button5"
        android:layout_below="@+id/button5"
        android:layout_marginTop="20dp"
        android:layout_marginRight="90dp"
        android:textColor="#ffffff"
        android:background="@color/colorGreen"
        android:text="@string/databasecatalogue" />

    <Button
        android:id="@+id/button7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/button6"
        android:layout_below="@+id/button6"
        android:layout_marginTop="20dp"
        android:layout_marginRight="90dp"
        android:textColor="#ffffff"
        android:background="@color/colorGreen"
        android:text="@string/databasevat" />

    <Button
        android:id="@+id/button9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/button7"
        android:layout_below="@+id/button7"
        android:layout_marginTop="20dp"
        android:layout_marginRight="90dp"
        android:textColor="#ffffff"
        android:background="@color/colorGreen"
        android:text="@string/databasecountry" />
</RelativeLayout>
