<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/colorGreen"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="70dp"
        android:focusable="true"
        android:id="@+id/textInputLayout4">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter barcode number"
            android:textColor="@color/colorGreen"
            android:textSize="20sp"
            android:inputType="number"
            android:textColorHint="@color/colorGreen">
        </EditText>
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textInputLayout4"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/descproduct"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView14"
        android:layout_alignStart="@+id/textView14"
        android:layout_marginTop="10dp"
        android:text="@string/datedelivery"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView8"
        android:layout_alignStart="@+id/textView8"
        android:layout_marginTop="5dp"
        android:text=""
        android:textColor="@color/colorGreen"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView19"
        android:layout_alignStart="@+id/textView19"
        android:layout_marginTop="20dp"
        android:text="@string/price"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView10"
        android:textSize="18sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/totalrest" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView11"
        android:layout_below="@+id/textView11"
        android:layout_marginTop="12dp"
        android:textSize="18sp"
        android:text="@string/reserved" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView12"
        android:layout_below="@+id/textView12"
        android:layout_marginTop="12dp"
        android:textSize="18sp"
        android:text="@string/renew" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView13"
        android:layout_below="@+id/textView13"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:text="@string/available" />

    <Button
        android:id="@+id/button10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="25dp"
        android:background="@color/colorGreen"
        android:minWidth="110dp"
        android:text="@string/newscan"
        android:textColor="#ffffff"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button10"
        android:layout_alignBottom="@+id/button10"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="15dp"
        android:background="@color/colorGreen"
        android:minWidth="150dp"
        android:text="@string/basket"
        android:textColor="#ffffff"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView9"
        android:layout_alignStart="@+id/textView9"
        android:layout_marginStart="0dp"
        android:layout_marginTop="20dp"
        android:text="@string/realcode"
        android:textSize="18sp" />


</RelativeLayout>